# models/sistemas.go
@@ -10,10 +10,10 @@ import (
 )
 
 type Sistemas struct {
-	IdSistema      int    `orm:"column(id_sistema);pk;auto"`
-	NombreSistema  string `orm:"column(nombre_sistema);null"`
-	Observacion    string `orm:"column(observacion);null"`
-	IdHojaHistoria *int   `orm:"column(id_hoja_historia);rel(fk);null"`
+	IdSistema      int           `orm:"column(id_sistema);pk;auto"`
+	IdHojaHistoria *HojaHistoria `orm:"column(id_hoja_historia);rel(fk);null"`
+	NombreSistema  string        `orm:"column(nombre_sistema);null"`
+	Observacion    string        `orm:"column(observacion);null"`
 }
 
 func (p *Sistemas) TableName() string {
