# swagger/swagger.yml
@@ -1,14 +1,14 @@
 swagger: "2.0"
 info:
-  title: beego Test API
-  description: beego has a very cool tools to autogenerate documents for your API
-  version: 1.0.0
-  termsOfService: http://beego.me/
+  title: Medicina
+  description: Api para Medicina dentro del módulo de Salud del proyecto SIBUD
+  version: "1.0"
+  termsOfService: http://www.udistrital.edu.co/politicas-de-privacidad.pdf
   contact:
-    email: astaxie@gmail.com
+    email: baluist@correo.udistrital.edu.co
   license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    name: BSD-3-Clause
+    url: http://opensource.org/licenses/BSD-3-Clause
 basePath: /v1
 paths:
   /Antecedente/:
@@ -32,19 +32,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -150,19 +146,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -268,19 +260,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -386,19 +374,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -504,19 +488,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -622,19 +602,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -740,19 +716,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -858,19 +830,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -976,19 +944,15 @@ paths:
         type: string
       - in: consulta
         name: order
-        description: El orden correspondiente a cada campo de clasificación, si es
-          un valor único, se aplica a todos los campos de clasificación. Por ejemplo,
-          desc, asc ...
+        description: El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...
         type: string
       - in: consulta
         name: limit
-        description: Limite el tamaño del conjunto de resultados. Debe ser un número
-          entero
+        description: Limite el tamaño del conjunto de resultados. Debe ser un número entero
         type: string
       - in: consulta
         name: offset
-        description: Posición inicial del conjunto de resultados. Debe ser un número
-          entero
+        description: Posición inicial del conjunto de resultados. Debe ser un número entero
         type: string
       responses:
         "200":
@@ -1082,11 +1046,9 @@ definitions:
         type: integer
         format: int64
       IdHistoriaClinica:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.HistoriaClinica'
       IdTipoAntecedente:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.TipoAntecedente'
       Observaciones:
         type: string
   models.ConsultaFisioterapia:
@@ -1099,8 +1061,7 @@ definitions:
         type: integer
         format: int64
       IdHojaHistoria:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.HojaHistoria'
       Motivo_consulta:
         type: string
       Observaciones:
@@ -1133,7 +1094,7 @@ definitions:
       Numero:
         type: integer
         format: int64
-      PlanManejo:
+      PlanDeManejo:
         type: string
   models.Examen:
     title: Examen
@@ -1146,11 +1107,9 @@ definitions:
         type: integer
         format: int64
       IdHojaHistoria:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.HojaHistoria'
       IdTipoExamen:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.TipoExamen'
       Nombre:
         type: string
       Observacion:
@@ -1175,14 +1134,12 @@ definitions:
         type: string
         format: datetime
       IdDiagnostico:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.Diagnostico'
       IdEspecialidad:
         type: integer
         format: int64
       IdHistoriaClinica:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.HistoriaClinica'
       IdHojaHistoria:
         type: integer
         format: int64
@@ -1201,8 +1158,7 @@ definitions:
     type: object
     properties:
       IdHojaHistoria:
-        type: integer
-        format: int64
+        $ref: '#/definitions/models.HojaHistoria'
       IdSistema:
         type: integer
         format: int64
